# trans

./: .gitignore  CMakeLists.txt  SENSO-Wheel.dbc  gen_make_release.sh
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: can_io.h  client.h  dumper.h  mqio.h
include/dbc/: senso__wheel.h
include/simone/: SimOneEvaluationAPI.h  SimOneHDMapAPI.h  SimOnePNCAPI.h  SimOneServiceAPI.h  SimOneStreamingAPI.h
include/simone/Service/: SimOneIOStruct.h
include/simone/ffmpeg/libavutil/: ffversion.h
include/simone/public/common/: MSignal.h
include/zd/: MsgStruct.h  ZDAPI.h  ZDBOX2WebSocketAPI.h
lib/boost/: libboost_atomic.so.1.78.0  libboost_chrono.so.1.78.0  libboost_container.so.1.78.0  libboost_context.so.1.78.0  libboost_contract.so.1.78.0  libboost_coroutine.so.1.78.0  libboost_date_time.so.1.78.0  libboost_graph.so.1.78.0  libboost_iostreams.so.1.78.0  libboost_json.so.1.78.0  libboost_locale.so.1.78.0  libboost_log.so.1.78.0  libboost_log_setup.so.1.78.0  libboost_math_c99.so.1.78.0  libboost_math_c99f.so.1.78.0  libboost_math_tr1.so.1.78.0  libboost_math_tr1f.so.1.78.0  libboost_math_tr1l.so.1.78.0  libboost_nowide.so.1.78.0  libboost_numpy36.so.1.78.0  libboost_program_options.so.1.78.0  libboost_python36.so.1.78.0  libboost_random.so.1.78.0  libboost_regex.so.1.78.0  libboost_thread.so.1.78.0  libboost_timer.so.1.78.0  libboost_type_erasure.so.1.78.0  libboost_unit_test_framework.so.1.78.0
lib/boost/cmake/boost_atomic-1.78.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
lib/boost/cmake/boost_chrono-1.78.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
lib/boost/cmake/boost_container-1.78.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
lib/boost/cmake/boost_context-1.78.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
lib/boost/cmake/boost_contract-1.78.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
lib/boost/cmake/boost_coroutine-1.78.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-shared.cmake  libboost_coroutine-variant-static.cmake
lib/simone/: libavformat.so.58  libavutil.so.56  libswresample.so.3  libswscale.so.5
src/: Config_.cpp  PID.cpp  PID.h  ZDAPI.cpp  ZDBOX2WebSocketAPI.cpp  can_io.cpp  client.cpp  client.h  dumper.cpp  http_client.cpp  http_client.h  main.cpp  mqio.cpp  senso__wheel.cpp  simapi.cpp  simapi.h  timer.cpp  timer.hpp
(+109 files in other folders)
